# ros2_pick_n_place_braccio

./: README.md  frames_2026-05-22_13.19.08.gv
install/: local_setup.sh  setup.sh
install/braccio_description/share/braccio_description/: local_setup.sh  package.ps1  package.sh
install/braccio_gazebo/share/braccio_gazebo/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/braccio_moveit_config/share/braccio_moveit_config/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/braccio_yolo_sorting/lib/braccio_yolo_sorting/: yolo_detector_node.py  (+2 more)
log/: latest_build
src/braccio_description/: CMakeLists.txt
src/braccio_description/config/: braccio_controllers.yaml
src/braccio_description/launch/: display.launch.py
src/braccio_description/rviz/: braccio_with_camera.rviz  urdf.rviz
src/braccio_description/urdf/: braccio.urdf.xacro
src/braccio_gazebo/: CMakeLists.txt
src/braccio_gazebo/launch/: braccio.launch.py  braccio_gazebo.launch.py
src/braccio_gazebo/scripts/: activate_controllers.sh
src/braccio_gazebo/worlds/: braccio_sorting.sdf  braccio_sorting.world
src/braccio_moveit_config/: .setup_assistant  package.xml
src/braccio_moveit_config/config/: braccio.srdf  braccio.urdf.xacro  initial_positions.yaml  kinematics.yaml
src/braccio_yolo_sorting/: package.xml  setup.py
src/braccio_yolo_sorting/braccio_yolo_sorting/: braccio_moveit_sorting_controller.py  yolo_detector_node.py
src/braccio_yolo_sorting/launch/: braccio_moveit_sorting.launch.py  braccio_sorting.launch.py
(+20 files in other folders)
